src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__nested_repeat_with_missing_until_end_repeat.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error: Missing expected Token [KeywordUntil, KeywordEndRepeat]
  ┌─ <internal>:7:12
  │
7 │            END_PROGRAM
  │            ^^^^^^^^^^^ Missing expected Token [KeywordUntil, KeywordEndRepeat]

error: Unexpected token: expected KeywordUntil but found 'END_PROGRAM'
  ┌─ <internal>:7:12
  │
7 │            END_PROGRAM
  │            ^^^^^^^^^^^ Unexpected token: expected KeywordUntil but found 'END_PROGRAM'


